Fix: Another solution to overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,8 @@
 // Global resets
 html {
   background-color: var(--off-white);
-  width: 100vw;
-  overflow-x: hidden;
+  // width: 100vw;
+  // overflow-x: hidden;
 }
 
 body {
